2012-11-04  Ilija Kocho  <ilijak@siva.com.mk>

	* include/var_io.h: Define register access to FTFL module. 
	Contributed by Nicolas Aujoux at 2012-09-07 [Bugzilla 1001561]

2012-09-28  Ilija Kocho  <ilijak@siva.com.mk>

	* var/current/cdl/hal_cortexm_kinetis.cdl
	* var/current/cdl/kinetis_clocking.cdl
	* var/current/doc/kinetis.sgml
	* var/current/include/hal_cache.h
	* var/current/include/var_io_ddrmc.h
	* var/current/include/var_io_lmem.h
	* var/current/src/kinetis_ddram.c
	* var/current/src/kinetis_misc.c:
	Separate data and code caches, as well as text indentation suggested by Jifl.
	Fixes to cache and SDRAM CDL and functions Improved SDRAM controller
	support due to better manufacturer documentation: Configurable pad control.
	                                           [Bugzilla 1001606]

2012-08-01  Ilija Kocho  <ilijak@siva.com.mk>

	* include/var_io.h, src/kinetis_misc.c: Add functions and macros
	for clock gating control to Kinetis.       [Bugzilla 1001642]

2012-05-18  Ilija Kocho  <ilijak@siva.com.mk>

	* include/hal_cache.h, src/kinetis_misc.c: Provide for cache
	enablement in RAM startup mode            [Bugzilla 1001606]

2012-05-19  John Dallaway  <john@dallaway.org.uk>

	* doc/kinetis.sgml: Close <para> and <refsect2> blocks.
	* cdl/hal_cortexm_kinetis.cdl: Reference per-package documentation.

2012-05-18  Ilija Kocho  <ilijak@siva.com.mk>

	* doc/kinetis_begin.sgml:
	* doc/kinetis_end.sgml:
	* doc/kinetis.sgml:
	New files -- Kinetis variant documentation. [Bug 1001580]

2012-05-17  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_kinetis.cdl:
	Bug fix: Do not refer external memory if Platform startup is
	not selected.  [ Bugzilla 1001590 ]

2012-05-04  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_kinetis.cdl:
	* src/kinetis_clocking.cdl:
	* src/kinetis_clocking.c:
	* include/hal_cache.h
	* include/var_io_lmem.h:
	* include/var_io_ddrmc.h:
	* include/var_io_devs.h:
	* include/var_io.h:
	* src/kinetis_ddram.c:
	* src/kinetis_misc.c: