@@ -235,7 +235,7 @@ hal_wdog_disable(void)
 static cyghwr_hal_kinetis_port_t * const Ports[] = {
     CYGHWR_HAL_KINETIS_PORTA_P, CYGHWR_HAL_KINETIS_PORTB_P,
     CYGHWR_HAL_KINETIS_PORTC_P, CYGHWR_HAL_KINETIS_PORTD_P,
-    CYGHWR_HAL_KINETIS_PORTE_P
+    CYGHWR_HAL_KINETIS_PORTE_P, CYGHWR_HAL_KINETIS_PORTF_P
 };
 
 void CYGOPT_HAL_KINETIS_MISC_FLASH_SECTION_ATTR
